[package]
name = "demo_actixweb"
version = "0.1.0"
authors = ["DhanaSowmi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt="1.0"
actix-web="2.0"
serde = "1.0.106" # For serializing and de-serializing
serde_json = "1.0.52" # For serializing and de-serializing
futures = "0.3.4" # For implementing cusotom responder